--- a/index.html
+++ b/index.html
@@ -23,215 +23,212 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 
-<body class="is-preload">
-    
+<body>
 
-        <!-- ================= NAVBAR ================= -->
-        <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
-            <div id="wrapper">
-                <a class="navbar-brand" href="#">Arigah</a>
+    <!-- ================= NAVBAR ================= -->
+    <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
+        <div class="container">
+            <a class="navbar-brand" href="#">Arigah</a>
 
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
 
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <nav>
-                        <ul class="navbar-nav ms-auto">
-                            <li class="nav-item"><a class="nav-link" href="#home">Home</a></li>
-                            <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
-                            <li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li>
-                            <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
-                        </ul>
-                    </nav>
-                </div>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item"><a class="nav-link" href="#home">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+                </ul>
             </div>
-        </nav>
+        </div>
+    </nav>
 
-        <!-- ================= HERO ================= -->
-        <section id="home" class="d-flex align-items-center justify-content-center vh-100 text-center">
-            <div class="overlay"></div>
+    <!-- ================= HERO ================= -->
+    <section id="home" class="d-flex align-items-center justify-content-center vh-100 text-center">
+        <div class="overlay"></div>
 
-            <div class="container-content">
+        <div class="container-content">
 
-                <h1 class="display-3 fw-bold animate__animated animate__fadeIn">
-                    Where Signals Meet Systems
-                </h1>
+            <h1 class="display-3 fw-bold animate__animated animate__fadeIn">
+                Where Signals Meet Systems
+            </h1>
 
-                <p class="lead mt-3 animate__animated animate__fadeIn animate__delay-1s">
-                    Core Networks | Telco Cloud | Coding | Philosophy
-                </p>
+            <p class="lead mt-3 animate__animated animate__fadeIn animate__delay-1s">
+                Core Networks | Telco Cloud | Coding | Philosophy
+            </p>
 
-                <!-- Animated Wave Art -->
-                <img src="images/coverart.png" alt="Optimization Wave Art" class="hero-wave" />
+            <!-- Animated Wave Art -->
+            <img src="images/coverart.png" alt="Optimization Wave Art" class="hero-wave" />
 
-                <div class="mt-4">
-                    <a href="#projects"
-                        class="btn btn-gradient btn-lg me-2 btn-custom animate__animated animate__fadeIn animate__delay-3s">
-                        View My Work
-                    </a>
-
-                </div>
-
-                <div class="icons-social mt-5 animate__animated animate__fadeIn animate__delay-4s">
-                    <a target="_blank" href="https://github.com/darigah" class="text-white mx-2 fs-3"><i
-                            class="fab fa-github"></i></a>
-                    <a target="_blank" href="https://dev.to/darigah" class="text-white mx-2 fs-3"><i
-                            class="fab fa-dev"></i></a>
-                    <a target="_blank" href="https://stackoverflow.com/story/darigah" class="text-white mx-2 fs-3"><i
-                            class="fab fa-stack-overflow"></i></a>
-                    <a target="_blank" href="https://www.linkedin.com/in/darigah" class="text-white mx-2 fs-3"><i
-                            class="fab fa-linkedin"></i></a>
-                    <a target="_blank" href="https://medium.com/@darigah" class="text-white mx-2 fs-3"><i
-                            class="fab fa-medium"></i></a>
-                </div>
+            <div class="mt-4">
+                <a href="#projects"
+                    class="btn btn-gradient btn-lg me-2 btn-custom animate__animated animate__fadeIn animate__delay-3s">
+                    View My Work
+                </a>
 
             </div>
-        </section>
 
-        <!-- ================= ABOUT ================= -->
-        <section id="about" class="py-5">
-            <div class="container">
-                <h2 class="text-center mb-5">About Me</h2>
+            <div class="icons-social mt-5 animate__animated animate__fadeIn animate__delay-4s">
+                <a target="_blank" href="https://github.com/darigah" class="text-white mx-2 fs-3"><i
+                        class="fab fa-github"></i></a>
+                <a target="_blank" href="https://dev.to/darigah" class="text-white mx-2 fs-3"><i
+                        class="fab fa-dev"></i></a>
+                <a target="_blank" href="https://stackoverflow.com/story/darigah" class="text-white mx-2 fs-3"><i
+                        class="fab fa-stack-overflow"></i></a>
+                <a target="_blank" href="https://www.linkedin.com/in/darigah" class="text-white mx-2 fs-3"><i
+                        class="fab fa-linkedin"></i></a>
+                <a target="_blank" href="https://medium.com/@darigah" class="text-white mx-2 fs-3"><i
+                        class="fab fa-medium"></i></a>
+            </div>
 
-                <div class="row align-items-center">
-                    <div class="col-md-6">
-                        <p class="lead">
-                            I work on the parts of telecom networks you only notice when they fail, and my job is to
-                            make sure you never notice them.
-                            I enjoy turning messy infrastructure into calm, scalable systems, automating the boring
-                            parts, and pretending sports isn’t just applied physics with egos.
-                            I like building things that scale quietly and work loudly.
-                        </p>
-                    </div>
+        </div>
+    </section>
 
-                    <div class="col-md-6 text-center">
-                        <img src="profile-placeholder.jpg" alt="Douglas Arigah"
-                            class="img-fluid rounded-circle profile-img">
-                    </div>
+    <!-- ================= ABOUT ================= -->
+    <section id="about" class="py-5">
+        <div class="container">
+            <h2 class="text-center mb-5">About Me</h2>
+
+            <div class="row align-items-center">
+                <div class="col-md-6">
+                    <p class="lead">
+                        I work on the parts of telecom networks you only notice when they fail, and my job is to make
+                        sure you never notice them.
+                        I enjoy turning messy infrastructure into calm, scalable systems, automating the boring parts,
+                        and pretending sports isn’t just applied physics with egos.
+                        I like building things that scale quietly and work loudly.
+                    </p>
+                </div>
+
+                <div class="col-md-6 text-center">
+                    <img src="profile-placeholder.jpg" alt="Douglas Arigah"
+                        class="img-fluid rounded-circle profile-img">
                 </div>
             </div>
-        </section>
+        </div>
+    </section>
 
-        <!-- ================= PROJECTS ================= -->
-        <section id="projects" class="py-5 bg-dark text-white">
-            <div class="container">
-                <h2 class="text-center mb-5">Projects</h2>
+    <!-- ================= PROJECTS ================= -->
+    <section id="projects" class="py-5 bg-dark text-white">
+        <div class="container">
+            <h2 class="text-center mb-5">Projects</h2>
 
-                <div class="row g-4">
-                    <div class="col-md-4">
-                        <div class="card project-card">
-                            <div class="card-body text-center">
-                                <i class="fas fa-network-wired fa-3x mb-3"></i>
-                                <h5 class="card-title">Core Network </h5>
-                                <p class="card-text">
-                                    Core network architecture for high-speed connectivity.
-                                </p>
-                                <a href="#" class="btn btn-outline-light btn-sm">Learn More</a>
-                            </div>
+            <div class="row g-4">
+                <div class="col-md-4">
+                    <div class="card project-card">
+                        <div class="card-body text-center">
+                            <i class="fas fa-network-wired fa-3x mb-3"></i>
+                            <h5 class="card-title">Core Network </h5>
+                            <p class="card-text">
+                                Core network architecture for high-speed connectivity.
+                            </p>
+                            <a href="#" class="btn btn-outline-light btn-sm">Learn More</a>
                         </div>
                     </div>
+                </div>
 
-                    <div class="col-md-4">
-                        <div class="card project-card">
-                            <div class="card-body text-center">
-                                <i class="fas fa-cloud fa-3x mb-3"></i>
-                                <h5 class="card-title">Telco Cloud </h5>
-                                <p class="card-text">
-                                    Kubernetes-based telco cloud.
-                                </p>
-                                <a href="#" class="btn btn-outline-light btn-sm">Learn More</a>
-                            </div>
+                <div class="col-md-4">
+                    <div class="card project-card">
+                        <div class="card-body text-center">
+                            <i class="fas fa-cloud fa-3x mb-3"></i>
+                            <h5 class="card-title">Telco Cloud </h5>
+                            <p class="card-text">
+                                Kubernetes-based telco cloud.
+                            </p>
+                            <a href="#" class="btn btn-outline-light btn-sm">Learn More</a>
                         </div>
                     </div>
+                </div>
 
-                    <div class="col-md-4">
-                        <div class="card project-card">
-                            <div class="card-body text-center">
-                                <i class="fas fa-code fa-3x mb-3"></i>
-                                <h5 class="card-title">Automation </h5>
-                                <p class="card-text">
-                                    Python scripts to automate network tasks.
-                                </p>
-                                <a href="#" class="btn btn-outline-light btn-sm">Learn More</a>
-                            </div>
+                <div class="col-md-4">
+                    <div class="card project-card">
+                        <div class="card-body text-center">
+                            <i class="fas fa-code fa-3x mb-3"></i>
+                            <h5 class="card-title">Automation </h5>
+                            <p class="card-text">
+                                Python scripts to automate network tasks.
+                            </p>
+                            <a href="#" class="btn btn-outline-light btn-sm">Learn More</a>
                         </div>
                     </div>
                 </div>
             </div>
-        </section>
+        </div>
+    </section>
 
-        <!-- ================= CONTACT ================= -->
-        <section id="contact" class="py-5">
-            <div class="container">
-                <h2 class="text-center mb-5">Get in Touch</h2>
+    <!-- ================= CONTACT ================= -->
+    <section id="contact" class="py-5">
+        <div class="container">
+            <h2 class="text-center mb-5">Get in Touch</h2>
 
-                <div class="row justify-content-center">
-                    <div class="col-md-6">
-                        <form>
-                            <div class="mb-3">
-                                <input type="text" class="form-control" placeholder="Name" required>
-                            </div>
-                            <div class="mb-3">
-                                <input type="email" class="form-control" placeholder="Email" required>
-                            </div>
-                            <div class="mb-3">
-                                <textarea class="form-control" rows="5" placeholder="Your Message" required></textarea>
-                            </div>
-                            <button type="submit" class="btn btn-gradient btn-lg w-100">
-                                Send Message
-                            </button>
-                        </form>
-                    </div>
+            <div class="row justify-content-center">
+                <div class="col-md-6">
+                    <form>
+                        <div class="mb-3">
+                            <input type="text" class="form-control" placeholder="Name" required>
+                        </div>
+                        <div class="mb-3">
+                            <input type="email" class="form-control" placeholder="Email" required>
+                        </div>
+                        <div class="mb-3">
+                            <textarea class="form-control" rows="5" placeholder="Your Message" required></textarea>
+                        </div>
+                        <button type="submit" class="btn btn-gradient btn-lg w-100">
+                            Send Message
+                        </button>
+                    </form>
                 </div>
             </div>
-        </section>
+        </div>
+    </section>
 
-        <!-- ================= FOOTER ================= -->
-        <footer class="bg-dark text-white text-center py-3">
-            <p class="mb-0">&copy; 2026 Douglas Arigah. All Rights Reserved.</p>
-        </footer>
+    <!-- ================= FOOTER ================= -->
+    <footer class="bg-dark text-white text-center py-3">
+        <p class="mb-0">&copy; 2026 Douglas Arigah. All Rights Reserved.</p>
+    </footer>
 
-        <!-- ================= SCRIPTS ================= -->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js"></script>
+    <!-- ================= SCRIPTS ================= -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js"></script>
 
-        <script>
-            // Smooth scrolling
-            document.querySelectorAll('a.nav-link').forEach(anchor => {
-                anchor.addEventListener('click', function (e) {
-                    e.preventDefault();
-                    document.querySelector(this.getAttribute('href'))
-                        .scrollIntoView({ behavior: 'smooth' });
-                });
+    <script>
+        // Smooth scrolling
+        document.querySelectorAll('a.nav-link').forEach(anchor => {
+            anchor.addEventListener('click', function (e) {
+                e.preventDefault();
+                document.querySelector(this.getAttribute('href'))
+                    .scrollIntoView({ behavior: 'smooth' });
             });
+        });
 
-            // Hero Wave Animation
-            anime.timeline()
-                .add({
-                    targets: '.hero-wave',
-                    opacity: [0, 1],
-                    scale: [0.97, 1],
-                    duration: 1200,
-                    easing: 'easeOutExpo'
-                })
-                .add({
-                    targets: '.hero-wave',
-                    translateY: [
-                        { value: -8, duration: 2500 },
-                        { value: 8, duration: 2500 }
-                    ],
-                    translateX: [
-                        { value: -6, duration: 4000 },
-                        { value: 6, duration: 4000 }
-                    ],
-                    easing: 'easeInOutSine',
-                    direction: 'alternate',
-                    loop: true
-                });
-        </script>
-    
+        // Hero Wave Animation
+        anime.timeline()
+            .add({
+                targets: '.hero-wave',
+                opacity: [0, 1],
+                scale: [0.97, 1],
+                duration: 1200,
+                easing: 'easeOutExpo'
+            })
+            .add({
+                targets: '.hero-wave',
+                translateY: [
+                    { value: -8, duration: 2500 },
+                    { value: 8, duration: 2500 }
+                ],
+                translateX: [
+                    { value: -6, duration: 4000 },
+                    { value: 6, duration: 4000 }
+                ],
+                easing: 'easeInOutSine',
+                direction: 'alternate',
+                loop: true
+            });
+    </script>
+
 </body>
 
 </html>
