--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="theme-color" content="#0a0a0b">
+    <meta name="mobile-web-app-capable" content="yes">
     <title>Douglas Ariga | Core Network & Telco Cloud Engineer</title>
     <link rel="icon" href="favicon.ico" type="image/x-icon">
 
@@ -36,6 +38,7 @@
 
         html {
             scroll-behavior: smooth;
+            -webkit-text-size-adjust: 100%;
         }
 
         body {
@@ -111,6 +114,13 @@
         nav a:hover {
             color: var(--text);
             background: rgba(255, 255, 255, 0.06);
+        }
+
+        nav a:focus-visible,
+        .hero .cta:focus-visible,
+        .btn-custom:focus-visible {
+            outline: 2px solid rgba(255, 255, 255, 0.5);
+            outline-offset: 2px;
         }
 
         nav .btn-download {
@@ -246,6 +256,73 @@
         @media (max-width: 700px) {
             .cli-mockup .content {
                 grid-template-columns: 1fr;
+            }
+            .cli-mockup {
+                min-height: 0;
+            }
+            .cli-mockup .content {
+                min-height: 320px;
+            }
+            .cli-mockup .editor {
+                font-size: 0.75rem;
+                padding: 0.75rem 1rem;
+            }
+            .cli-mockup .terminal {
+                font-size: 0.75rem;
+                padding: 0.5rem 1rem;
+            }
+        }
+
+        /* ========== MOBILE: nav, spacing, touch targets ========== */
+        @media (max-width: 640px) {
+            nav {
+                flex-wrap: wrap;
+                gap: 0.5rem;
+                padding: 0.75rem 1rem;
+            }
+            nav .nav-links {
+                flex-wrap: wrap;
+                justify-content: flex-end;
+                gap: 0.25rem;
+            }
+            nav a {
+                padding: 0.5rem 0.625rem;
+                font-size: 0.875rem;
+                min-height: 44px;
+                display: inline-flex;
+                align-items: center;
+            }
+            .hero {
+                padding: 1.5rem 1rem 3rem;
+            }
+            .hero h1 {
+                font-size: 1.75rem;
+            }
+            .hero .sub {
+                font-size: 1rem;
+            }
+            .hero .ctas {
+                margin-bottom: 2rem;
+            }
+            .hero .cta {
+                min-height: 44px;
+                padding: 0.625rem 1rem;
+            }
+            section {
+                padding: 2.5rem 1rem;
+            }
+            section h2 {
+                font-size: 1.5rem;
+                margin-bottom: 1.5rem;
+            }
+            .cli-mockup .sidebar-item,
+            .cli-mockup .sidebar-section {
+                padding: 0.4rem 0.75rem;
+                font-size: 0.75rem;
+            }
+            .cli-mockup .tabs .tab {
+                font-size: 0.6875rem;
+                padding: 0.35rem 0.5rem;
             }
         }
 
@@ -444,6 +521,11 @@
             color: var(--text-muted);
             font-size: 1.25rem;
             transition: color 0.2s, transform 0.2s;
+            min-width: 44px;
+            min-height: 44px;
+            display: inline-flex;
+            align-items: center;
+            justify-content: center;
         }
 
         .icons-social a:hover {
